# anaplan-openapi

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  NOTICE  PRD.md  README.md  SCAN.md  build_spec.py  conftest.py  converter.py  main.py  oauth_authcode_step1.py  oauth_authcode_step2.py  oauth_device_step1.py  oauth_device_step2.py  pyproject.toml  schema_importer.py  sync_yaml.py  validate.py
administration/: README.md  administration-mcp.json  administration-openapi.json  administration-openapi.yaml
alm/: README.md  alm-mcp.json  alm-openapi.json  alm-openapi.yaml
audit/: README.md  audit-mcp.json  audit-openapi.json  audit-openapi.yaml
authentication/: README.md  authentication-mcp.json  authentication-openapi.json  authentication-openapi.yaml  postman-spec.yaml  postman-spec.yaml~
cloudworks/: README.md  cloudworks-mcp.json  cloudworks-openapi.json  cloudworks-openapi.yaml  cloudworks-ponytail.json
docs/: PRD.md  TESTING.md  mcp-agent-access.md  mcp-server-build.md  runbook-cloudworks-azure-four-imports.md  scan-path-parameter-sources.md
exception/: README.md  exception-mcp.json  exception-openapi.json  exception-openapi.yaml  postman-spec.yaml
financial-consolidation/: README.md  financial-consolidation-mcp.json  financial-consolidation-openapi.json  financial-consolidation-openapi.yaml
integration/: README.md  integration-mcp.json  integration-openapi.json  integration-openapi.yaml  integration-ponytail.json
oauth/: README.md  handwritten.yaml  oauth-mcp.json  oauth-openapi.json  oauth-openapi.yaml
scim/: README.md  scim-mcp.json  scim-openapi.json  scim-openapi.yaml
scripts/: _probe_categories.py  _probe_dimension_items.py  _probe_history_quota.py  _probe_list_items_write.py  _probe_schema2.py  (+24 more)
(+80 files in other folders)
