[project]
name = "anaplan-openapi"
version = "0.1.0"
description = "Community-maintained OpenAPI 3.0 specifications for the 9 publicly documented Anaplan REST APIs."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.14"
dependencies = [
    "openapi-spec-validator>=0.9.0",
    "httpx>=0.24.0",
    "anaplan-sdk[cert,oauth]>=0.5.16",
    "keyring>=25.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts", "tests"]
python_files = ["test_*.py"]
markers = [
    "live: mark test as requiring live API access (skipped by default)",
]
